# floe-specification

./: .bazelrc  .clang-format  .gitignore  BUILD.bazel  MODULE.bazel  README.md  go.mod  go.sum
.github/: repo_meta.yaml
cpp/: leak_check.sh  lsan.supp
cpp/main/: BUILD.bazel  bounce.cpp  create_kats.cpp  floe.cpp  floe.hpp  floe_test.cpp  floe_test_shared.cpp  floe_test_shared.hpp  kat_test.cpp  sample_cli.cpp
go/: BUILD.bazel  floe.go  floe_test.go
java/: BUILD.bazel
java/lib/src/main/java/com/snowflake/floe/: Decryptor.java  Encryptor.java  Floe.java  FloeAead.java  FloeDecryptingInputStream.java  FloeDecryptingOutputStream.java  FloeEncryptingInputStream.java  FloeEncryptingOutputStream.java  FloeHash.java  FloeInstance.java  FloeParameterSpec.java  FloeSegmentProcessor.java  FloeStream.java  SequentialDecryptor.java  SequentialEncryptor.java
java/lib/src/test/java/com/snowflake/floe/: FloeTest.java  StreamTest.java  TestUtils.java
rust/bench/: BUILD.bazel
rust/bench/src/: main.rs
rust/floe/: BUILD.bazel
rust/floe/src/: constants.rs  floe_result.rs  implementation.rs  interface.rs  lib.rs  tests.rs  types.rs
spec/: README.md
