# Copyright 2025 Snowflake Inc.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_go//go:def.bzl", "go_library", "go_test")

# gazelle_dependencies(go_repository_default_config = "//:WORKSPACE.bazel")

go_library(
    name = "go",
    srcs = ["floe.go"],
    importpath = "go/go",
    visibility = ["//visibility:public"],
    deps = ["@org_golang_x_crypto//hkdf"],
)

go_test(
    name = "go_test",
    srcs = ["floe_test.go"],
    data = ["//:test_kats"],
    embed = [":go"],
)
