# Copyright 2025 Snowflake Inc.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

cc_library(
    name = "floe",
    srcs = [
        "floe.cpp",
    ],
    hdrs = [
        "floe.hpp",
        "platform.hpp",
    ],
    deps = [
        "@abseil-cpp//absl/types:span",
        "@openssl//:crypto",
    ],
)

cc_binary(
    name = "create_kats",
    srcs = ["create_kats.cpp"],
    deps = [
        ":floe",
        ":floe_test_shared",
    ],
)

cc_library(
    name = "floe_test_shared",
    srcs = ["floe_test_shared.cpp"],
    hdrs = ["floe_test_shared.hpp"],
    deps = [":floe"],
)

cc_test(
    name = "kat_test",
    size = "small",
    srcs = ["kat_test.cpp"],
    data = ["//:test_kats"],
    deps = [
        ":floe",
        ":floe_test_shared",
        # TODO: Convert to gtest
    ],
)

cc_test(
    name = "bounce_test",
    size = "small",
    srcs = ["bounce.cpp"],
    deps = [
        ":floe",
        ":floe_test_shared",
        # TODO: Convert to gtest
    ],
)

cc_test(
    name = "floe_test",
    size = "small",
    srcs = ["floe_test.cpp"],
    data = ["//:test_kats"],
    deps = [
        ":floe",
        ":floe_test_shared",
        # TODO: Convert to gtest
    ],
)

cc_binary(
    name = "cli",
    srcs = ["sample_cli.cpp"],
    deps = [
        ":floe",
        ":floe_test_shared",
    ],
)
