# Copyright 2025 Snowflake Inc.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_clippy")

rust_binary(
    name = "bench",
    srcs = glob(["src/**/*.rs"]),
    crate_name = "floe_bench",
    env = {
        "RUST_BACKTRACE": "FULL",
    },
    visibility = ["//visibility:public"],
    deps = [
        "//rust/floe",
        "@crates//:aead",
        "@crates//:aes-gcm",
        "@crates//:criterion",
        "@crates//:dhat",
        "@crates//:rand",
    ],
)

rust_clippy(
    name = "bench_clippy",
    deps = [
        ":bench",
    ],
)
