# Copyright 2025 Snowflake Inc.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_rust//rust:defs.bzl", "rust_clippy", "rust_library", "rust_test")

rust_library(
    name = "floe",
    srcs = glob(["src/**/*.rs"]),
    crate_name = "floe",
    visibility = ["//visibility:public"],
    deps = [
        "@crates//:aead",
        "@crates//:aes-gcm",
        "@crates//:hmac",
        "@crates//:rand",
        "@crates//:sha2",
        "@crates//:subtle",
        "@crates//:zeroize",
    ],
)

rust_test(
    name = "floe_test",
    crate = ":floe",
    data = [
        "//:test_kats",
    ],
    deps = [
        ":floe",
        "@crates//:hex",
    ],
)

rust_clippy(
    name = "floe_clippy",
    testonly = True,
    deps = [
        ":floe",
        ":floe_test",
    ],
)
